--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.3.7",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^6.0.0-alpha.1",
     "@mui/material": "^6.0.0-alpha.1",
     "@tsparticles/all": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
+    "antd": "^5.17.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
