--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "antd": "^5.17.0",
     "firebase": "^10.11.1",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
