--- a/package.json
+++ b/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.3.7",
+    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^6.0.0-alpha.1",
     "@mui/material": "^6.0.0-alpha.1",
+    "@tanstack/react-table": "^8.16.0",
     "@tsparticles/all": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "antd": "^5.17.0",
     "firebase": "^10.11.1",
+    "framer-motion": "^11.1.9",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
