--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@tsparticles/all": "^3.3.0",
     "@tsparticles/react": "^3.0.0",
     "antd": "^5.17.0",
+    "apexcharts": "^3.49.0",
     "firebase": "^10.11.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.1",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
